[aiidalab]
title = TramBio

[metadata]
name = aiidalab-trambio
version = 0.1-alpha
author = Empa Scientific IT
author_email = 
description = TramBio App
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yakutovicha/aiidalab-trambio
project_urls =
    Logo = https://raw.githubusercontent.com/yakutovicha/aiidalab-trambio/main/img/logo.png
    Documentation = https://github.com/yakutovicha/aiidalab-trambio/#readme
    Bug Tracker = https://github.com/yakutovicha/aiidalab-trambio/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab>=23.3.0

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
